# mollusc-small

./: .gitignore  .gitmodules  Makefile  README.md  bin_to_clash_record.py  cabal.project  hie.yaml  mollusc-small.cabal
src/CPU/: ALU.hs  ControlReg.hs  Core.hs  Decoder.hs  ISA.hs  StateMachine.hs
src/Common/: Common.hs
src/HDL/: Common.hs
src/SOC/: SimpleSOC.hs
test-data/: .gitignore
tests/: soctrace.hs  unittests.hs
tests/Tests/CPU/: Common.hs  SimpleSOC.hs
